# claude-bushwack

./: .gitignore  AGENTS.md  CLAUDE.md  Makefile  README.md  picker_plan.md  pyproject.toml  tui_plan.md
src/claude_bushwack/: __init__.py  cli.py  conversation_metadata.py  core.py  exceptions.py  tui.py
tests/: conftest.py  test_cli.py  test_exceptions.py
tests/assets/: sample_conversation.jsonl
tests/core/: test_conversation_manager.py  test_conversation_metadata.py  test_path_parsing.py
tests/tui/: test_bushwack_app.py  test_decode_path_method.py  test_directory_picker.py
